# vnstock_agent

./: .env  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
notebooks/: vnstock_api.ipynb
src/agents/: vnstock.py
src/api/: main.py
src/scahema/: agent_reponse.py  api_args.py  company.py  trading.py
src/schema/: agent_reponse.py  api.py
src/tools/: company_info.py  current_time.py  trading_data.py
test/: test_api.py
