[project]
name = "vnstock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.1",
    "langchain-core>=1.0.4",
    "langchain[openai]>=1.0.5",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "vnstock>=3.3.0",
]
